feat: consolidate menu system documentation; create comprehensive guide and summary files, remove redundant documents, and ensure clarity on @MyMenu annotation usage